5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1601_1806.log
== TEST (2019-04-01 02:11:03) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo: ")
Pn = 1 - (m.factorial(365))/m.factorial(365-n)*(1/365**n)

print(round(Pn, 3))
-- ERROR:
File "XXXX", line 3
    Pn = 1 - (m.factorial(365))/m.factorial(365-n)*(1/365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:12:39) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1 - (m.factorial(365))/m.factorial(365-n))*(1/365**n)

print(round(Pn, 3))
-- ERROR:
File "XXXX", line 3
    Pn = 1 - (m.factorial(365))/m.factorial(365-n))*(1/365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:13:02) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1 - ((m.factorial(365))/m.factorial(365-n))*(1/365**n)

print(round(Pn, 3))
-- ERROR:
File "XXXX", line 3
    Pn = 1 - ((m.factorial(365))/m.factorial(365-n))*(1/365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:13:11) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1-((m.factorial(365))/m.factorial(365-n))*(1/365**n)

print(round(Pn, 3))
-- ERROR:
File "XXXX", line 3
    Pn = 1-((m.factorial(365))/m.factorial(365-n))*(1/365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:14:04) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1-((m.factorial(365))/m.factorial(365-n)*365**n)

print(round(Pn, 3))
-- ERROR:
File "XXXX", line 3
    Pn = 1-((m.factorial(365))/m.factorial(365-n)*365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:20:41) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1-((m.factorial(365))/m.factorial(365-n)*365**n)

print(round(Pn, 3))
-- ERROR:
File "XXXX", line 3
    Pn = 1-((m.factorial(365))/m.factorial(365-n)*365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:00) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1-((m.factorial(365))/m.factorial(365-n)*365**n)

print(round(Pn, 2))
-- ERROR:
File "XXXX", line 3
    Pn = 1-((m.factorial(365))/m.factorial(365-n)*365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:42) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
Pn = 1-((m.factorial(365-n))/m.factorial(365-n)*365**n)

print(round(Pn, 2))
-- ERROR:
File "XXXX", line 3
    Pn = 1-((m.factorial(365-n))/m.factorial(365-n)*365**n)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:00:12) 
-- CODE:
import math as m
n = int(input("numero de pessoas em um grupo:")
P = 1-((m.factorial(365-n)/m.factorial(365-n))*(1/365**n))
Pn = P*100

print(round(Pn, 2))
-- ERROR:
File "XXXX", line 3
    P = 1-((m.factorial(365-n)/m.factorial(365-n))*(1/365**n))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:00:59) 
-- CODE:
import math as m
n = int(input("numero do Grupo: "))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn = P*100
print(round(Pn, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:01:11) 
-- CODE:
import math as m
n = int(input("numero do Grupo: "))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn = P*100
print(round(Pn, 2))
-- EXECUTION TIME:
0.20091
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
